--- a/client/src/css/themes/common.variables.styl
+++ b/client/src/css/themes/common.variables.styl
@@ -14,7 +14,9 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   = #027be3
+// $primary   = #027be3
+// $secondary = #26A69A
+$primary   = #f26725
 $secondary = #26A69A
 $tertiary  = #555
 
