--- a/client/src/css/themes/common.variables.styl
+++ b/client/src/css/themes/common.variables.styl
@@ -16,8 +16,9 @@
 
 // $primary   = #027be3
 // $secondary = #26A69A
-$primary   = #f26725
-$secondary = #26A69A
+// $primary   = #26A69A
+$primary   = rgba(0, 130, 129, 0.8)
+$secondary = #f26725
 $tertiary  = #555
 
 $neutral   = #E0E1E2
