--- a/client/src/css/app.styl
+++ b/client/src/css/app.styl
@@ -1,5 +1,6 @@
 // app global css
 @import '../components/styles.styl'
+@import './afs-icons.styl'
 
 $primary-9   = tint($primary, 90%)
 $primary-8   = tint($primary, 80%)
