форма редактирования фильтра

--- a/client/src/css/app.styl
+++ b/client/src/css/app.styl
@@ -11,7 +11,11 @@ $primary-4   = tint($primary, 40%)
 $primary-3   = tint($primary, 30%)
 $primary-2   = tint($primary, 20%)
 $primary-1   = tint($primary, 10%)
+$mand-color  = $yellow-11
 
+
+.text-mand-color
+  color $mand-color
 .text-primary-9
   color $primary-9
 .text-primary-8
@@ -48,6 +52,8 @@ $primary-1   = tint($primary, 10%)
   background $primary-2
 .bg-primary-1
   background $primary-1
+.bg-mand-color
+  background $mand-color
 
 .q-tab
   &.active
