--- a/client/src/css/themes/common.variables.styl
+++ b/client/src/css/themes/common.variables.styl
@@ -26,3 +26,14 @@ $positive  = #21BA45
 $negative  = #DB2828
 $info      = #31CCEC
 $warning   = #F2C037
+
+$primary-9   = tint($primary, 90%)
+$primary-8   = tint($primary, 80%)
+$primary-7   = tint($primary, 70%)
+$primary-6   = tint($primary, 60%)
+$primary-5   = tint($primary, 50%)
+$primary-4   = tint($primary, 40%)
+$primary-3   = tint($primary, 30%)
+$primary-2   = tint($primary, 20%)
+$primary-1   = tint($primary, 10%)
+$mand-color  = $yellow-11
