--- a/client/src/components/Claims/claims-mobile.styl
+++ b/client/src/components/Claims/claims-mobile.styl
@@ -37,3 +37,13 @@
   height 40px
 .claim-list-body
   height calc(100vh - 90px)
+.claim-row-priority-corner
+  border-color transparent
+  border-style solid
+  border-width 1.1em
+  border-right-color $red
+  border-top-color $red
+.claim-row-priority
+  position absolute;
+  top 5px
+  right 8px
