--- a/client/src/components/Claims/claims-mobile.styl
+++ b/client/src/components/Claims/claims-mobile.styl
@@ -12,7 +12,10 @@
   border-left-color $red-6
 .claim-list-active
   background-color $primary-3
-@media (max-width: 400px)
+@media (max-width: 340px)
+  .claim-option-select
+    min-width 220px
+@media (min-width: 341px) and (max-width: 400px)
   .claim-option-select
     min-width 250px
 @media (min-width: 401px) and (max-width: 500px)
@@ -40,10 +43,50 @@
 .claim-row-priority-corner
   border-color transparent
   border-style solid
-  border-width 1.1em
+  border-width 1.0em
+  border-right-color $red
+  border-top-color $red
+.claim-row-priority-1
   border-right-color $red
   border-top-color $red
 .claim-row-priority
-  position absolute;
-  top 5px
+  position absolute
+  top 6px
   right 8px
+  font-size 12px
+  font-weight 400
+
+$priorColors = $green-5,
+               $green-6,
+               $green-7,
+               $amber-7,
+               $amber-8,
+               $amber-9,
+               $red-7,
+               $red-8,
+               $red-9,
+               $red-10
+
+for i in (1..10)
+  .claim-row-priority-{i}
+    border-right-color $priorColors[(i)]
+    border-top-color $priorColors[(i)]
+
+$tStatusBg = $light,
+             $warning,
+             $info,
+             $positive,
+             $negative
+
+$tStatusFg = $grey-10,
+             $grey-10,
+             $grey-10,
+             $white,
+             $white
+
+for i in (0..4)
+  .claim-row-tstatus-{i}
+    background-color $tStatusBg[(i)]
+    color $tStatusFg[(i)]
+    // color contrast($tStatusBg[(i)], $black).ratio
+    //.ratio > contrast($tStatusBg[(i)], #FFF).ratio ? #000 : #FFF
