--- a/client/src/css/themes/common.variables.styl
+++ b/client/src/css/themes/common.variables.styl
@@ -36,4 +36,15 @@ $primary-4   = tint($primary, 40%)
 $primary-3   = tint($primary, 30%)
 $primary-2   = tint($primary, 20%)
 $primary-1   = tint($primary, 10%)
+
+$secondary-9   = tint($secondary, 90%)
+$secondary-8   = tint($secondary, 80%)
+$secondary-7   = tint($secondary, 70%)
+$secondary-6   = tint($secondary, 60%)
+$secondary-5   = tint($secondary, 50%)
+$secondary-4   = tint($secondary, 40%)
+$secondary-3   = tint($secondary, 30%)
+$secondary-2   = tint($secondary, 20%)
+$secondary-1   = tint($secondary, 10%)
+
 $mand-color  = $yellow-11
