--- a/client/src/components/styles.styl
+++ b/client/src/components/styles.styl
@@ -1,3 +1,3 @@
 @import "afsc-form/styles.styl"
 @import "afsc-filters/styles.styl"
-@import "Claims/claims-mobile.styl"
+@import "claims/styles.styl"
