--- a/client/src/css/themes/common.variables.styl
+++ b/client/src/css/themes/common.variables.styl
@@ -48,3 +48,4 @@ $secondary-2   = tint($secondary, 20%)
 $secondary-1   = tint($secondary, 10%)
 
 $mand-color  = $yellow-11
+$tooltip-padding       = 5px
