--- a/client/src/css/app.styl
+++ b/client/src/css/app.styl
@@ -63,6 +63,12 @@
 .fixed-ta-content
   font-family monospace, monospace
   font-size .8em
+.page-form
+  padding 5px
+  display flex
+  align-items center
+  justify-content center
+  flex-wrap wrap
 
 for i in (1..9)
   .ts-{i}
