--- a/client/src/components/afsc-form/styles.styl
+++ b/client/src/components/afsc-form/styles.styl
@@ -21,12 +21,12 @@
 .form-header
   background-color $primary
   padding 5px
-  color $white
-  border-bottom $white solid 1px
+  color white
+  border-bottom white solid 1px
   .title
     opacity .9
 .form-footer
   background-color $primary
   padding 5px
-  color $white
-  border-top $white solid 1px
+  color white
+  border-top white solid 1px
