--- a/client/src/components/claims/list/mobile/claims-mobile.styl
+++ b/client/src/components/claims/list/mobile/claims-mobile.styl
@@ -84,11 +84,11 @@ $tStatusBg = $light,
              $green,
              $red
 
-$tStatusFg = $white,
-             $white,
-             $white,
-             $white,
-             $white
+$tStatusFg = white,
+             white,
+             white,
+             white,
+             white
 
 for i in (0..4)
   .claim-row-tstatus-{i}
