--- a/client/src/components/claims/view/styles.styl
+++ b/client/src/components/claims/view/styles.styl
@@ -22,7 +22,7 @@
 .claim-fields-dt-val
   text-align left
   background-color $primary
-  color $white
+  color white
 .claim-text
   border-left 3px solid $primary
 
