--- a/client/src/css/app.styl
+++ b/client/src/css/app.styl
@@ -73,3 +73,6 @@
 for i in (1..9)
   .ts-{i}
     font-size (1em*i/10)
+.app-text-area
+  .q-if-label-above
+    transform scale(1) translate(0, -22px)
