--- a/client/src/css/app.styl
+++ b/client/src/css/app.styl
@@ -76,3 +76,6 @@ for i in (1..9)
 .app-text-area
   .q-if-label-above
     transform scale(1) translate(0, -22px)
+.auth-content
+  max-width 400px
+  width 90%
