--- a/client/src/css/app.styl
+++ b/client/src/css/app.styl
@@ -79,3 +79,9 @@ for i in (1..9)
 .auth-content
   max-width 400px
   width 90%
+.auth-apply-error
+  color $red
+  text-align center
+  margin-top 5px
+.auth-apply-ok
+  color $green
