--- a/client/src/components/claims/view/styles.styl
+++ b/client/src/components/claims/view/styles.styl
@@ -141,3 +141,9 @@
   font-size 0.8em
   font-weight 700
   font-family: monospace, monospace
+
+.claim-info-rel-beta
+  background-color $blue-14
+
+.claim-info-rel-stable
+  background-color $red-8
