--- a/client/src/css/app.styl
+++ b/client/src/css/app.styl
@@ -85,3 +85,26 @@ for i in (1..9)
   margin-top 5px
 .auth-apply-ok
   color $green
+.selectable
+  user-select text
+
+$priorColors = $green-4,
+  $green-5,
+  $green-6,
+  $green-7,
+  $amber-7,
+  $amber-8,
+  $amber-9,
+  $red-7,
+  $red-8,
+  $red-9,
+  $red-10
+
+for i in (1..10)
+  .claim-row-priority-{i}
+    border-right-color $priorColors[(i)]
+    border-top-color $priorColors[(i)]
+
+for i in (1..10)
+  .claim-info-priority-{i}
+    background-color $priorColors[(i)]
